<resources>
    <string name="app_name">PAPEL Scanner</string>

    <!-- activity_main_menu -->
    <string name="create_classroom_btn_text">Δημιουργία Τμήματος</string>
    <string name="create_classroom_textview_text">Δημιουργία Τμήματος</string>
    <string name="all_classrooms_btn_text">Προβολή Τμημάτων</string>

    <string name="students_en">Students</string>
    <string name="students_el">Φοιτητές</string>

    <string name="add">ΠΡΟΣΘΗΚΗ</string>
    <string name="name">Όνομα</string>
    <string name="lastname">Επώνυμο</string>
    <string name="school_class">Είστε στο τμήμα:</string>
    <string name="activity_mainclass_string_1">Σκανάρετε το QR του τμήματος</string>

    <string name="TextView_center_no_internet">Πρέπει να έχετε πρόβαση στο διαδίκτυο για να προχωρήσετε</string>
    <string name="TextView_center_older_version">Έχετε μια παλαιότερη έκδοση της εφαρμογής</string>

    <string name="change_classroom">Αλλαγή</string>
    <string name="add_in_classroom">Προσθήκη Φοιτητή</string>
    <string name="developer">Λουκάς Κοπανιάς</string>

    <string name="scan_classroom_text">Σκανάρετε τμήμα</string>
    <string name="all_classrooms_text">Τα τμήματά μου</string>
    <string name="create_classroom_text">Φτιάξτε ένα τμήμα</string>

    <string name="login_button_text">Είσοδος</string>
    <string name="login_button_text_caps">ΕΙΣΟΔΟΣ</string>

    <string-array name="subjects">
        <item>Array Item One</item>
        <item>Array Item Two</item>
        <item>Array Item Three</item>
    </string-array>

</resources>
