<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context="com.lkop.qr_scanner.ui.activities.MainMenuActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/textlines"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/creator_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container_main_menu_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:layout_above="@id/footer">

        <TextView
            android:id="@+id/center_textview"
            android:layout_width="208dp"
            android:layout_height="64dp"
            android:clickable="false"
            android:gravity="center_horizontal"
            android:text="@string/TextView_center_no_internet"
            android:textColor="@color/my_color"
            android:textSize="18sp"
            android:visibility="gone"
            android:layout_centerInParent="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/middle_separator"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/scan_classroom_layout_mainmenu_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_10dp_border_1dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="6dp">

                <ImageButton
                    android:id="@+id/scan_classroom_imagebutton_mainmenu_activity"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:background="@drawable/qr_code_128"
                    android:clickable="false"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:paddingTop="6dp"
                    android:text="@string/scan_classroom_text"
                    android:textColor="@color/light_gray_text" />

            </LinearLayout>


        </LinearLayout>

        <RelativeLayout
            android:id="@+id/middle_separator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/middle_separator"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/my_classrooms_layout_mainmenu_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:background="@drawable/round_10dp_border_1dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="6dp">

                <ImageButton
                    android:id="@+id/all_classrooms_imagebutton_mainmenu_activity"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:background="@drawable/all_classrooms_128"
                    android:clickable="false"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:paddingTop="6dp"
                    android:text="@string/all_classrooms_text"
                    android:textColor="@color/light_gray_text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/create_classroom_layout_mainmenu_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_10dp_border_1dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="6dp">

                <ImageButton
                    android:id="@+id/create_classroom_imagebutton_mainmenu_activity"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:background="@drawable/create_classrom_128"
                    android:clickable="false"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:paddingTop="6dp"
                    android:text="@string/create_classroom_text"
                    android:textColor="@color/light_gray_text" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/textlines"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/developer"
            android:textColor="#000"
            android:textSize="15sp" />
    </RelativeLayout>

</RelativeLayout>