<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/textlines"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PAPEL ID Scanner"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/creator_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container_classroom_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer"
        android:layout_below="@id/header"
        android:orientation="vertical"
        android:background="#ffffff">

        <LinearLayout
            android:id="@+id/classroom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/qr_preview_imageview_classroom_activity"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/qr_code_blue_black_64" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:id="@+id/current_classroom"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingTop="0dp"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/current_classroom_date"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:textAlignment="center"
                        android:textColor="#000000" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <ImageButton
                        android:id="@+id/exit_classroom_imagebutton"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/exit_blue_64" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/people_64" />

                <RelativeLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/students_counter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>



        <RelativeLayout
            android:id="@+id/frame_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/classroom">

                <LinearLayout
                    android:id="@+id/subcontainer"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_above="@id/buttons"
                    android:background="@drawable/border_down"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/column_lastname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#b0b0b0"
                            android:textStyle="bold"
                            android:paddingStart="10dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/students_el"
                            android:textColor="#000"
                            android:textSize="16dp" />
                    </LinearLayout>

<!--                    <LinearLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:orientation="horizontal">-->

<!--                        &lt;!&ndash; first element of the row&ndash;&gt;-->
<!--                        <TextView-->
<!--                            android:id="@+id/column_lastname"-->
<!--                            android:layout_width="@dimen/lastname_width"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:background="#b0b0b0"-->
<!--                            android:textStyle="bold"-->
<!--                            android:paddingStart="10dp"-->
<!--                            android:paddingTop="10dp"-->
<!--                            android:paddingBottom="10dp"-->
<!--                            android:text="@string/lastname"-->
<!--                            android:textColor="#000"-->
<!--                            android:textSize="16dp" />-->

<!--                        <TextView-->
<!--                            android:id="@+id/column_name"-->
<!--                            android:layout_width="@dimen/name_width"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:background="#b0b0b0"-->
<!--                            android:textStyle="bold"-->
<!--                            android:paddingStart="10dp"-->
<!--                            android:paddingTop="10dp"-->
<!--                            android:paddingBottom="10dp"-->
<!--                            android:text="@string/name"-->
<!--                            android:textColor="#000"-->
<!--                            android:textSize="16dp" />-->

<!--                        <TextView-->
<!--                            android:id="@+id/column_am"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:background="#b0b0b0"-->
<!--                            android:textStyle="bold"-->
<!--                            android:paddingStart="10dp"-->
<!--                            android:paddingTop="10dp"-->
<!--                            android:paddingBottom="10dp"-->
<!--                            android:text="Α.Μ."-->
<!--                            android:textColor="#000"-->
<!--                            android:textSize="16dp"/>-->

<!--                    </LinearLayout>-->


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/empty_message_textview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Δεν υπάρχουν φοιτητές"
                            android:textAlignment="center"
                            android:textColor="#000"
                            android:textSize="18sp">
                        </TextView>

                        <ListView
                            android:id="@+id/students_listview_classroom_activity"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        </ListView>

<!--                        <ScrollView-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="match_parent"-->
<!--                            android:paddingLeft="10dp"-->
<!--                            android:paddingRight="10dp"-->
<!--                            android:paddingTop="5dp"-->
<!--                            android:scrollbars="none">-->

<!--                            <HorizontalScrollView-->
<!--                                android:layout_width="match_parent"-->
<!--                                android:layout_height="wrap_content"-->
<!--                                android:scrollbars="horizontal">-->

<!--                                <TableLayout-->
<!--                                    android:id="@+id/students_table"-->
<!--                                    android:layout_width="wrap_content"-->
<!--                                    android:layout_height="wrap_content">-->

<!--                                </TableLayout>-->

<!--                            </HorizontalScrollView>-->

<!--                        </ScrollView>-->

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/buttons"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <Button
                        android:id="@+id/add_student_button_classroom_activity"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/add_in_classroom"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:background="#4cae4c"
                        style="?android:attr/borderlessButtonStyle" />

                </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>